--- a/.github/labeler.yml
+++ b/.github/labeler.yml
@@ -1,22 +1,22 @@
-# This workflow will triage pull requests and apply a label based on the
-# paths that are modified in the pull request.
-#
-# To use this workflow, you will need to set up a .github/labeler.yml
-# file with configuration.  For more information, see:
-# https://github.com/actions/labeler
+documentation:
+  - docs/**
+  - "**/*.md"
+  - README.md
 
-name: Labeler
-on: [pull_request_target]
+frontend:
+  - frontend/**
 
-jobs:
-  label:
+backend:
+  - backend/**
 
-    runs-on: ubuntu-latest
-    permissions:
-      contents: read
-      pull-requests: write
+config:
+  - "**/*.config.js"
+  - "**/*.config.ts"
+  - "**/package.json"
+  - .github/**
 
-    steps:
-    - uses: actions/labeler@v4
-      with:
-        repo-token: "${{ secrets.GITHUB_TOKEN }}"
+assets:
+  - images/**
+  - "**/*.png"
+  - "**/*.jpg"
+  - "**/*.svg"
