--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,8 @@
   "main": "src/app.js",
   "scripts": {
     "start": "node src/app.js",
-    "dev": "node src/app.js"
+    "dev": "node src/app.js",
+    "test": "jest"
   },
   "author": "",
   "license": "ISC",
@@ -18,5 +19,9 @@
     "jsonwebtoken": "^9.0.3",
     "mongoose": "^9.1.3",
     "nodemailer": "^7.0.12"
+  },
+  "devDependencies": {
+    "jest": "^30.2.0",
+    "supertest": "^7.2.2"
   }
 }
